# Midas

./: .gitignore  CMakeLists.txt  Directory.Build.props.template  Midas.cpp  Midas.sln  Midas.vcxproj  README.md
src/c-compiler/: ast.h  conec.c  input.h  instructions.h  main.cpp  readjson.h  translate.h  types.h  vale.cpp  valemain.h
src/c-compiler/genllvm/: genllvm.c
test/: test_vale.py
